<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Resgiter</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explanation">You are just logging in the new app store of the most trendy shoes</string>
    <string name="button_instructions">Instructions</string>
    <string name="instructions_title">"Instructions"</string>
    <string name="instructions_explanation">Welcome to the instructions of the shoe store app</string>
    <string name="button_shoelist">Shoe list</string>
    <string name="button_details">Shoe list details</string>
    <string name="titleDetails">DETAILS</string>
    <string name="shoeExampleDescription">Shoe example</string>
    <string name="shoeName">Shoe name</string>
    <string name="shoeSize">Shoe size</string>
    <string name="shoeCompany">Shoe company</string>
    <string name="shoeDescription">Shoe description</string>
    <string name="logout">Log out</string>
    <string name="done">Done</string>
    <string name="buttonSave">SAVE</string>
    <string name="buttonCancel">CANCEL</string>
    <string name="shoeimagecontent">shoeimage</string>
    <string name="nameText">Name:</string>
    <string name="sizeText">Size:</string>
    <string name="companyText">Company:</string>
    <string name="descriptionText">Description:</string>


</resources>
