<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="welcomeViewModel"
            type="com.udacity.shoestore.WelcomeViewModel"/>
    </data>

    <!--In this case a ConstraintLayout allows to create the welcome screen since it is easy to
    place the welcome button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/GMVgrey"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24000001" />

        <TextView
            android:id="@+id/welcomeExplanation"
            android:layout_width="277dp"
            android:layout_height="89dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/explanation"
            android:textAlignment="center"
            android:textColor="@color/GMVgrey"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
            app:layout_constraintVertical_bias="0.120000005" />

        <Button
            android:id="@+id/button_shoelist"
            style="@style/Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_instructions"
            android:onClick="@{() -> welcomeViewModel.onShoeList()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeExplanation"
            app:layout_constraintVertical_bias="0.19" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>