<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="instructionsViewModel"
            type="com.udacity.shoestore.InstructionsViewModel"/>
    </data>

    <!--In this case a ConstraintLayout allows to create the instructions screen since it is easy to
    place the instructions button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InstructionsFragment">



        <TextView
            android:id="@+id/instructionsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions_title"
            android:textColor="@color/GMVgrey"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.24000001" />

        <TextView
            android:id="@+id/instructionsExplanation"
            android:layout_width="277dp"
            android:layout_height="89dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:text="@string/instructions_explanation"
            android:textAlignment="center"
            android:textColor="@color/GMVgrey"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsTitle"
            app:layout_constraintVertical_bias="0.120000005" />

        <Button
            android:id="@+id/button_shoelist"
            style="@style/Button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/button_shoelist"
            android:onClick="@{() -> instructionsViewModel.onShoeList()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionsExplanation"
            app:layout_constraintVertical_bias="0.19" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>